[package]
name = "voxels"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
wgpu = "0.13"
env_logger = "0.9"
log = "0.4"
async-std = { version = "1.12", features = ["attributes"] }
bytemuck = { version = "1.10.0", features = ["derive"] }
cgmath = "0.18"
lerp = { version = "0.4.0", features = ["derive"] }
rand = "0.8.5"
noise = "0.7.0"
palette = "0.6.1"
stavec = { git = "https://github.com/agerasev/stavec", branch = "master" }
winit = { git = "https://github.com/jim-eckerlein/winit" }
derive_setters = "0.1.5"
memoffset = "0.6.5"
bitflags = "1.3.2"
