[package]
name = "voxels"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
wgpu = "0.17.1"
env_logger = "0.9"
log = "0.4"
bytemuck = { version = "1.10.0", features = ["derive"] }
cgmath = "0.18"
lerp = { version = "0.4.0", features = ["derive"] }
rand = "0.8.5"
noise = "0.7.0"
palette = "0.6.1"
winit = "0.28.7"
derive_setters = "0.1.5"
memoffset = "0.6.5"
bitflags = "1.3.2"
pollster = "0.3.0"
