[package]
name = "endless"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.11.0"
wgpu = "0.17.1"
env_logger = "0.9"
bytemuck = { version = "1.10.0", features = ["derive"] }
cgmath = "0.18"
rand = "0.8.5"
noise = "0.8.2"
winit = "0.28.7"
derive_setters = "0.1.6"
memoffset = "0.9.0"
bitflags = "2.4.1"
pollster = "0.3.0"
egui = "0.23.0"
egui-wgpu = "0.23.0"
puffin = "0.17.0"
puffin_egui = "0.23.0"

[profile.dev]
debug = true
opt-level = 1
